{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 1724,
  "lineage": "57f71ed2-f226-66c2-21b9-3c269e2e530d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "transit",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:704063666843:transit-gateway/tgw-0f972a65a6bc098b3",
            "association_default_route_table_id": "tgw-rtb-0b58c2acec93d9eab",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "dns_support": "enable",
            "id": "tgw-0f972a65a6bc098b3",
            "multicast_support": "disable",
            "owner_id": "704063666843",
            "propagation_default_route_table_id": "tgw-rtb-0b58c2acec93d9eab",
            "tags": {
              "Name": "Transit_gateway"
            },
            "tags_all": {
              "Name": "Transit_gateway"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgva1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-042948147a1a940ba",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-05f6a1b7d0b230ad0",
              "subnet-09d87f2d044b6ce0a"
            ],
            "tags": {
              "Name": "App"
            },
            "tags_all": {
              "Name": "App"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0f972a65a6bc098b3",
            "vpc_id": "vpc-0bda405b07f57c01c",
            "vpc_owner_id": "704063666843"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgva2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0e8a8541ef2e8ab27",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-022762931531df2de",
              "subnet-0d8f9287f36534b9e"
            ],
            "tags": {
              "Name": "Ingress"
            },
            "tags_all": {
              "Name": "Ingress"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0f972a65a6bc098b3",
            "vpc_id": "vpc-09bba1ac01e4a7959",
            "vpc_owner_id": "704063666843"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgva3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-044bacb02e0c1c571",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-05a543e25ae14b221",
              "subnet-0c480f4dde8be3ba4"
            ],
            "tags": {
              "Name": "Egress"
            },
            "tags_all": {
              "Name": "Egress"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0f972a65a6bc098b3",
            "vpc_id": "vpc-00418bd866c2541b2",
            "vpc_owner_id": "704063666843"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0462b082465a47c10",
            "association_id": "eipassoc-095841059fae0af30",
            "domain": "vpc",
            "id": "eipalloc-0462b082465a47c10",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0eb138441d396fc41",
            "private_dns": "ip-10-3-0-251.ec2.internal",
            "private_ip": "10.3.0.251",
            "public_dns": "ec2-44-194-251-101.compute-1.amazonaws.com",
            "public_ip": "44.194.251.101",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "elasticIP"
            },
            "tags_all": {
              "Name": "elasticIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:704063666843:instance/i-0b980afd51bb728b2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b980afd51bb728b2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "thang_hey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e66626c40247a055",
            "private_dns": "ip-10-2-0-36.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.0.36",
            "public_ip": "54.89.255.93",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c30955cbeacc5258",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-022762931531df2de",
            "tags": {
              "Name": "test-server Ingress VPC"
            },
            "tags_all": {
              "Name": "test-server Ingress VPC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b1b66f5e44fa5528"
            ]
          },
          "dependencies": [
            "aws_security_group.sg1",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ami_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:704063666843:instance/i-06480e0f1723b8048",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2SsmIamRole",
            "id": "i-06480e0f1723b8048",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "thang_hey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a4b9f78920941cad",
            "private_dns": "ip-10-1-0-54.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.54",
            "public_ip": "54.147.147.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0118331a7bd7bbbfe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05f6a1b7d0b230ad0",
            "tags": {
              "Name": "server A 0"
            },
            "tags_all": {
              "Name": "server A 0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e93b89c22df72a73"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nana",
            "aws_iam_role.role",
            "aws_security_group.sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ami_linux"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:704063666843:instance/i-0804491874f1363c7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2SsmIamRole",
            "id": "i-0804491874f1363c7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "thang_hey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09a0e946f645d0388",
            "private_dns": "ip-10-1-0-156.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.156",
            "public_ip": "3.95.186.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0efa5c74ddca120c1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05f6a1b7d0b230ad0",
            "tags": {
              "Name": "server A 1"
            },
            "tags_all": {
              "Name": "server A 1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e93b89c22df72a73"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nana",
            "aws_iam_role.role",
            "aws_security_group.sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ami_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:704063666843:instance/i-0a1b735c0a2fcc36a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2SsmIamRole",
            "id": "i-0a1b735c0a2fcc36a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "thang_hey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01a3b688f457bba99",
            "private_dns": "ip-10-3-0-199.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.3.0.199",
            "public_ip": "34.205.63.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d004e09ff8c81746",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c480f4dde8be3ba4",
            "tags": {
              "Name": "Bastion host"
            },
            "tags_all": {
              "Name": "Bastion host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0284f22beb866b00f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nana",
            "aws_iam_role.role",
            "aws_security_group.sg2",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ami_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:704063666843:instance/i-0ee77ae0cb0c96188",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2SsmIamRole",
            "id": "i-0ee77ae0cb0c96188",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "thang_hey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04810e0852820ebec",
            "private_dns": "ip-10-3-1-58.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.3.1.58",
            "public_ip": "3.88.200.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0df3c84f7d2d01b22",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a543e25ae14b221",
            "tags": {
              "Name": "Private host"
            },
            "tags_all": {
              "Name": "Private host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0284f22beb866b00f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nana",
            "aws_iam_role.role",
            "aws_security_group.sg2",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ami_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Egress VPC",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704063666843:internet-gateway/igw-05fce5a379a2b2f69",
            "id": "igw-05fce5a379a2b2f69",
            "owner_id": "704063666843",
            "tags": {
              "Name": "Egress VPC - IGW"
            },
            "tags_all": {
              "Name": "Egress VPC - IGW"
            },
            "vpc_id": "vpc-00418bd866c2541b2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "Ingress VPC",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704063666843:internet-gateway/igw-02bed718397d0ab05",
            "id": "igw-02bed718397d0ab05",
            "owner_id": "704063666843",
            "tags": {
              "Name": "Ingress VPC - IGW"
            },
            "tags_all": {
              "Name": "Ingress VPC - IGW"
            },
            "vpc_id": "vpc-09bba1ac01e4a7959"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:704063666843:loadbalancer/app/test-lb/3aa51d15a6ef6d34",
            "arn_suffix": "app/test-lb/3aa51d15a6ef6d34",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-test-lb-1343082790.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:704063666843:loadbalancer/app/test-lb/3aa51d15a6ef6d34",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ee8dc8261b6e45f9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05f6a1b7d0b230ad0"
              },
              {
                "subnet_id": "subnet-09d87f2d044b6ce0a"
              }
            ],
            "subnets": [
              "subnet-05f6a1b7d0b230ad0",
              "subnet-09d87f2d044b6ce0a"
            ],
            "tags": {
              "Environment": "test"
            },
            "tags_all": {
              "Environment": "test"
            },
            "vpc_id": "vpc-0bda405b07f57c01c",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "test_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:704063666843:listener/app/test-lb/3aa51d15a6ef6d34/ba9c3a39f543fce3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:704063666843:targetgroup/testApp/cbe05e3b7217c7e8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:704063666843:listener/app/test-lb/3aa51d15a6ef6d34/ba9c3a39f543fce3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:704063666843:loadbalancer/app/test-lb/3aa51d15a6ef6d34",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test_lb",
            "aws_lb_target_group.test_group",
            "aws_security_group.lb_sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:704063666843:targetgroup/testApp/cbe05e3b7217c7e8",
            "arn_suffix": "targetgroup/testApp/cbe05e3b7217c7e8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:704063666843:targetgroup/testApp/cbe05e3b7217c7e8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "testApp",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bda405b07f57c01c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test_target1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:704063666843:targetgroup/testApp/cbe05e3b7217c7e8-20230118014356048600000009",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:704063666843:targetgroup/testApp/cbe05e3b7217c7e8",
            "target_id": "i-06480e0f1723b8048"
          },
          "dependencies": [
            "aws_iam_instance_profile.nana",
            "aws_iam_role.role",
            "aws_instance.instance1",
            "aws_lb_target_group.test_group",
            "aws_security_group.sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ami_linux"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:704063666843:targetgroup/testApp/cbe05e3b7217c7e8-20230118014355669800000008",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:704063666843:targetgroup/testApp/cbe05e3b7217c7e8",
            "target_id": "i-0804491874f1363c7"
          },
          "dependencies": [
            "aws_iam_instance_profile.nana",
            "aws_iam_role.role",
            "aws_instance.instance1",
            "aws_lb_target_group.test_group",
            "aws_security_group.sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ami_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0462b082465a47c10",
            "connectivity_type": "public",
            "id": "nat-0b8ce6d7da900936a",
            "network_interface_id": "eni-0eb138441d396fc41",
            "private_ip": "10.3.0.251",
            "public_ip": "44.194.251.101",
            "subnet_id": "subnet-0c480f4dde8be3ba4",
            "tags": {
              "Name": "Nat-subnet Ingress VPC"
            },
            "tags_all": {
              "Name": "Nat-subnet Ingress VPC"
            }
          },
          "dependencies": [
            "aws_eip.ip",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704063666843:route-table/rtb-0ff86d895623fd015",
            "id": "rtb-0ff86d895623fd015",
            "owner_id": "704063666843",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b8ce6d7da900936a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00418bd866c2541b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ip",
            "aws_nat_gateway.nat",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704063666843:route-table/rtb-0f02cb2d46843fddf",
            "id": "rtb-0f02cb2d46843fddf",
            "owner_id": "704063666843",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f972a65a6bc098b3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "App VPC Route Table"
            },
            "tags_all": {
              "Name": "App VPC Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bda405b07f57c01c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.transit",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704063666843:route-table/rtb-03ea1c5ce19fd051b",
            "id": "rtb-03ea1c5ce19fd051b",
            "owner_id": "704063666843",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02bed718397d0ab05",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f972a65a6bc098b3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Ingress VPC Route Table"
            },
            "tags_all": {
              "Name": "Ingress VPC Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09bba1ac01e4a7959"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.transit",
            "aws_internet_gateway.ig1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704063666843:route-table/rtb-0cc84c80c002edb03",
            "id": "rtb-0cc84c80c002edb03",
            "owner_id": "704063666843",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05fce5a379a2b2f69",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f972a65a6bc098b3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Egress VPC Route Table"
            },
            "tags_all": {
              "Name": "Egress VPC Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00418bd866c2541b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.transit",
            "aws_internet_gateway.ig1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5ba23bab9d8862f",
            "route_table_id": "rtb-03ea1c5ce19fd051b",
            "subnet_id": "subnet-022762931531df2de"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit",
            "aws_internet_gateway.ig1",
            "aws_route_table.rtb",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045df13df30ce0d70",
            "route_table_id": "rtb-0cc84c80c002edb03",
            "subnet_id": "subnet-0c480f4dde8be3ba4"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit",
            "aws_internet_gateway.ig1",
            "aws_route_table.rtc",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054498549969c1dfb",
            "route_table_id": "rtb-0f02cb2d46843fddf",
            "subnet_id": "subnet-05f6a1b7d0b230ad0"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit",
            "aws_route_table.rta",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076ede4807872efbe",
            "route_table_id": "rtb-0ff86d895623fd015",
            "subnet_id": "subnet-05a543e25ae14b221"
          },
          "dependencies": [
            "aws_eip.ip",
            "aws_nat_gateway.nat",
            "aws_route_table.rt_nat",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704063666843:security-group/sg-0ee8dc8261b6e45f9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee8dc8261b6e45f9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "LB - SG",
            "name_prefix": "",
            "owner_id": "704063666843",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bda405b07f57c01c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704063666843:security-group/sg-0e93b89c22df72a73",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e93b89c22df72a73",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "App VPC - SG",
            "name_prefix": "",
            "owner_id": "704063666843",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bda405b07f57c01c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704063666843:security-group/sg-0b1b66f5e44fa5528",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b1b66f5e44fa5528",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Ingress VPC - SG",
            "name_prefix": "",
            "owner_id": "704063666843",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09bba1ac01e4a7959"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704063666843:security-group/sg-0284f22beb866b00f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0284f22beb866b00f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Egress VPC - SG",
            "name_prefix": "",
            "owner_id": "704063666843",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00418bd866c2541b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "App VPC - AZ1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704063666843:subnet/subnet-05f6a1b7d0b230ad0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f6a1b7d0b230ad0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "704063666843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "App VPC - AZ1"
            },
            "tags_all": {
              "Name": "App VPC - AZ1"
            },
            "vpc_id": "vpc-0bda405b07f57c01c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "App VPC - AZ2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704063666843:subnet/subnet-09d87f2d044b6ce0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d87f2d044b6ce0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "704063666843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "App VPC - AZ2"
            },
            "tags_all": {
              "Name": "App VPC - AZ2"
            },
            "vpc_id": "vpc-0bda405b07f57c01c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "Egress VPC - AZ1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704063666843:subnet/subnet-0c480f4dde8be3ba4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.3.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c480f4dde8be3ba4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "704063666843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Egress VPC - AZ1"
            },
            "tags_all": {
              "Name": "Egress VPC - AZ1"
            },
            "vpc_id": "vpc-00418bd866c2541b2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "Egress VPC - AZ2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704063666843:subnet/subnet-05a543e25ae14b221",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.3.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a543e25ae14b221",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "704063666843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Egress VPC - AZ2"
            },
            "tags_all": {
              "Name": "Egress VPC - AZ2"
            },
            "vpc_id": "vpc-00418bd866c2541b2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "Ingress VPC - AZ1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704063666843:subnet/subnet-022762931531df2de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022762931531df2de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "704063666843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Ingress VPC - AZ1"
            },
            "tags_all": {
              "Name": "Ingress VPC - AZ1"
            },
            "vpc_id": "vpc-09bba1ac01e4a7959"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "Ingress VPC - AZ2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704063666843:subnet/subnet-0d8f9287f36534b9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8f9287f36534b9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "704063666843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Ingress VPC - AZ2"
            },
            "tags_all": {
              "Name": "Ingress VPC - AZ2"
            },
            "vpc_id": "vpc-09bba1ac01e4a7959"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "App VPC",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704063666843:vpc/vpc-0bda405b07f57c01c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0e1eb9dfb68a73638",
            "default_route_table_id": "rtb-0ac80956718552b30",
            "default_security_group_id": "sg-0c4abd20818812c38",
            "dhcp_options_id": "dopt-06d1b853dc562d494",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bda405b07f57c01c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ac80956718552b30",
            "owner_id": "704063666843",
            "tags": {
              "Name": "App VPC"
            },
            "tags_all": {
              "Name": "App VPC"
            }
          }
        },
        {
          "index_key": "Egress VPC",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704063666843:vpc/vpc-00418bd866c2541b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.3.0.0/16",
            "default_network_acl_id": "acl-03f71cbf38438c06b",
            "default_route_table_id": "rtb-00aa9b26ae53a0599",
            "default_security_group_id": "sg-0d2953ef7cb518227",
            "dhcp_options_id": "dopt-06d1b853dc562d494",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00418bd866c2541b2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00aa9b26ae53a0599",
            "owner_id": "704063666843",
            "tags": {
              "Name": "Egress VPC"
            },
            "tags_all": {
              "Name": "Egress VPC"
            }
          }
        },
        {
          "index_key": "Ingress VPC",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704063666843:vpc/vpc-09bba1ac01e4a7959",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-06ff4c34193454c8b",
            "default_route_table_id": "rtb-0b53f9ed3054133f8",
            "default_security_group_id": "sg-0d0e9c707ccfe7691",
            "dhcp_options_id": "dopt-06d1b853dc562d494",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09bba1ac01e4a7959",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b53f9ed3054133f8",
            "owner_id": "704063666843",
            "tags": {
              "Name": "Ingress VPC"
            },
            "tags_all": {
              "Name": "Ingress VPC"
            }
          }
        }
      ]
    }
  ]
}